--- a/festivos.html
+++ b/festivos.html
@@ -5,97 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendario de Festivos por Comunidad</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .container {
-            margin-top: 20px;
-            max-width: 800px;
-            width: 100%;
-            padding: 20px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h2 {
-            text-align: center;
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        .form-group select {
-            width: 100%;
-            padding: 10px;
-            box-sizing: border-box;
-        }
-        .calendar {
-            display: grid;
-            grid-template-columns: repeat(7, 1fr);
-            gap: 5px;
-            margin-top: 20px;
-        }
-        .day {
-            border: 1px solid #ddd;
-            padding: 5px;
-            text-align: center;
-            min-height: 80px;
-        }
-        .day-header {
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-        .festivo {
-            background-color: #ffcccc;
-        }
-        .motivo {
-            font-size: 10px;
-            color: #666;
-        }
-        nav {
-            margin-top: 20px;
-        }
-        nav a {
-            margin: 0 10px;
-            text-decoration: none;
-            color: #4CAF50;
-        }
+        /* ... (mantener los estilos existentes) ... */
     </style>
 </head>
 <body>
     <div class="container">
         <h2>Calendario de Festivos por Comunidad</h2>
         <div class="form-group">
-            <label for="comunidad">Seleccionar Comunidad Autónoma:</label>
-            <select id="comunidad" onchange="mostrarCalendario()">
-                <option value="">Seleccione una comunidad</option>
-                <option value="andalucia">Andalucía</option>
-                <option value="aragon">Aragón</option>
-                <option value="asturias">Asturias</option>
-                <option value="baleares">Baleares</option>
-                <option value="canarias">Canarias</option>
-                <option value="cantabria">Cantabria</option>
-                <option value="castilla_la_mancha">Castilla-La Mancha</option>
-                <option value="castilla_y_leon">Castilla y León</option>
-                <option value="cataluna">Cataluña</option>
-                <option value="comunidad_valenciana">Comunidad Valenciana</option>
-                <option value="extremadura">Extremadura</option>
-                <option value="galicia">Galicia</option>
-                <option value="la_rioja">La Rioja</option>
-                <option value="madrid">Madrid</option>
-                <option value="murcia">Murcia</option>
-                <option value="navarra">Navarra</option>
-                <option value="pais_vasco">País Vasco</option>
+            <label for="anio">Seleccionar Año:</label>
+            <select id="anio">
+                <option value="2024">2024</option>
+                <option value="2025">2025</option>
             </select>
         </div>
+        <div class="form-group">
+            <label for="comunidad">Seleccionar Comunidad Autónoma:</label>
+            <select id="comunidad">
+                <option value="">Seleccione una comunidad</option>
+                <option value="ES-AN">Andalucía</option>
+                <option value="ES-AR">Aragón</option>
+                <option value="ES-AS">Asturias</option>
+                <option value="ES-IB">Baleares</option>
+                <option value="ES-CN">Canarias</option>
+                <option value="ES-CB">Cantabria</option>
+                <option value="ES-CM">Castilla-La Mancha</option>
+                <option value="ES-CL">Castilla y León</option>
+                <option value="ES-CT">Cataluña</option>
+                <option value="ES-VC">Comunidad Valenciana</option>
+                <option value="ES-EX">Extremadura</option>
+                <option value="ES-GA">Galicia</option>
+                <option value="ES-RI">La Rioja</option>
+                <option value="ES-MD">Madrid</option>
+                <option value="ES-MC">Murcia</option>
+                <option value="ES-NC">Navarra</option>
+                <option value="ES-PV">País Vasco</option>
+            </select>
+        </div>
+        <button onclick="obtenerFestivos()">Mostrar Festivos</button>
         <div id="calendario" class="calendar"></div>
         <nav>
             <a href="index.html">Volver al Inicio</a>
@@ -103,62 +49,52 @@
     </div>
 
     <script>
-        const diasSemana = ['Lun', 'Mar', 'Mié', 'Jue', 'Vie', 'Sáb', 'Dom'];
-        const meses = ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'];
+        const API_KEY = '713476495d8a48f794bb5b5d6ec09144'; // Reemplaza con tu API key de Abstract o Calendarific
 
-        // Ejemplo de festivos (deberías tener una base de datos o API real para esto)
-        const festivos = {
-            andalucia: [
-                { fecha: '2024-01-01', motivo: 'Año Nuevo' },
-                { fecha: '2024-01-06', motivo: 'Reyes Magos' },
-                { fecha: '2024-02-28', motivo: 'Día de Andalucía' },
-                // ... Añadir más festivos
-            ],
-            // ... Añadir festivos para otras comunidades
-        };
-
-        function mostrarCalendario() {
+        async function obtenerFestivos() {
+            const anio = document.getElementById('anio').value;
             const comunidad = document.getElementById('comunidad').value;
+            const calendarioDiv = document.getElementById('calendario');
+            calendarioDiv.innerHTML = 'Cargando...';
+
+            try {
+                const url = `https://holidays.abstractapi.com/v1/?api_key=${API_KEY}&country=ES&year=${anio}&region=${comunidad}`;
+                const response = await fetch(url);
+                const festivos = await response.json();
+
+                mostrarCalendario(festivos, anio);
+            } catch (error) {
+                console.error('Error al obtener los festivos:', error);
+                calendarioDiv.innerHTML = 'Error al cargar los festivos. Por favor, intente de nuevo.';
+            }
+        }
+
+        function mostrarCalendario(festivos, anio) {
             const calendarioDiv = document.getElementById('calendario');
             calendarioDiv.innerHTML = '';
 
-            if (!comunidad) return;
+            const meses = ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'];
 
-            const festivosComunidad = festivos[comunidad] || [];
-            const anioActual = new Date().getFullYear();
+            meses.forEach((mes, index) => {
+                const mesDiv = document.createElement('div');
+                mesDiv.innerHTML = `<h3>${mes} ${anio}</h3>`;
+                const diasMes = new Date(anio, index + 1, 0).getDate();
 
-            for (let mes = 0; mes < 12; mes++) {
-                const nombreMes = meses[mes];
-                calendarioDiv.innerHTML += `<div class="month-header" style="grid-column: 1 / -1; text-align: center; font-weight: bold; margin: 10px 0;">${nombreMes} ${anioActual}</div>`;
+                for (let dia = 1; dia <= diasMes; dia++) {
+                    const fecha = `${anio}-${(index + 1).toString().padStart(2, '0')}-${dia.toString().padStart(2, '0')}`;
+                    const festivo = festivos.find(f => f.date === fecha);
 
-                const primerDia = new Date(anioActual, mes, 1).getDay();
-                const diasEnMes = new Date(anioActual, mes + 1, 0).getDate();
-
-                // Añadir días de la semana
-                diasSemana.forEach(dia => {
-                    calendarioDiv.innerHTML += `<div class="day-header">${dia}</div>`;
-                });
-
-                // Añadir espacios en blanco para el primer día
-                for (let i = 0; i < (primerDia + 6) % 7; i++) {
-                    calendarioDiv.innerHTML += '<div class="day"></div>';
-                }
-
-                // Añadir días del mes
-                for (let dia = 1; dia <= diasEnMes; dia++) {
-                    const fecha = `${anioActual}-${(mes + 1).toString().padStart(2, '0')}-${dia.toString().padStart(2, '0')}`;
-                    const festivo = festivosComunidad.find(f => f.fecha === fecha);
-                    const claseFestivo = festivo ? 'festivo' : '';
-                    const motivoFestivo = festivo ? `<div class="motivo">${festivo.motivo}</div>` : '';
-
-                    calendarioDiv.innerHTML += `
-                        <div class="day ${claseFestivo}">
-                            <div>${dia}</div>
-                            ${motivoFestivo}
-                        </div>
+                    const diaDiv = document.createElement('div');
+                    diaDiv.className = festivo ? 'day festivo' : 'day';
+                    diaDiv.innerHTML = `
+                        <div>${dia}</div>
+                        ${festivo ? `<div class="motivo">${festivo.name}</div>` : ''}
                     `;
+                    mesDiv.appendChild(diaDiv);
                 }
-            }
+
+                calendarioDiv.appendChild(mesDiv);
+            });
         }
     </script>
 </body>
